--- a/style.css.scss
+++ b/style.css.scss
@@ -1,7 +1,7 @@
 body {
 	font-size: 20px;
-  background: url(img/img.png) no-repeat 0 0;
-  background-size: 1200px;
+  background: url(img/img.png) no-repeat -10px 50px;
+  background-size: 900px;
 }
 
 .navbar-default{
@@ -71,7 +71,7 @@ body {
 form {
 	float: right;
   margin-right: 130px;
-  margin-top: 120px;
+  margin-top: 80px;
   max-width: 500px;
   height: 500px;
   background: #D6EFFF;
@@ -211,7 +211,7 @@ form input[type="submit"]:active {
 
 .footer {
 	background: url(natural-skincare.jpg) no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% 99%;
 	color: white;
 	padding: 50px;
 }
